Fix modal position on mobile

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h1 {
   width: 450px;
   padding: 1.3rem;
   min-height: 250px;
-  position: absolute;
+ 
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 15px;
